--- a/my-theme.scss
+++ b/my-theme.scss
@@ -1,5 +1,5 @@
 // Material Theming
 
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
-$mdc-typography-family: 'Fira Sans';
+$mdc-typography-family: 'Lexend Deca';
