🐺🐬 Checkpoint ./package.json:5887444/7738 ./index.html:5887444/333 ./app.scss:5887444/425 ./my-theme.scss:5887444/30

--- a/app.scss
+++ b/app.scss
@@ -2,8 +2,7 @@
 @import "my-theme";
 
 // Import MDC Web components
-@use "material-components-web/material-components-web";
-@import "@material/typography/mdc-typography";
+@use "@material/typography/mdc-typography";
 @import "@material/button/mdc-button";
 
 // Import your components for your application
