⛸📰 Checkpoint ./app.scss:5887444/279 ./package.json:5887444/4000 ./my-theme.scss:5887444/272 ./index.html:5887444/58

--- a/my-theme.scss
+++ b/my-theme.scss
@@ -3,3 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
 $mdc-typography-family: 'Lexend Deca';
+
+@use "@material/theme" with (
+  $primary: #FEDBD0,
+  $on-primary: #442C2E
+);
