--- a/app.scss
+++ b/app.scss
@@ -2,8 +2,10 @@
 @import "my-theme";
 
 // Import MDC Web components
-@use "@material/typography/mdc-typography";
-@import "@material/button/mdc-button";
+@import "@material/typography/mdc-typography";
+@use "@material/button";
+
+@include button.core-styles;
 
 // Import your components for your application
 @import "my-components";
