--- a/app.scss
+++ b/app.scss
@@ -2,9 +2,8 @@
 @import "my-theme";
 
 // Import MDC Web components
-@import "@material/typography/mdc-typography";
+@use "@material/typography/mdc-typography";
 @use "@material/button";
-
 @include button.core-styles;
 
 // Import your components for your application
